--- a/views/g2test.ejs
+++ b/views/g2test.ejs
@@ -24,54 +24,46 @@
                 <div class="container g2form-container">
 
                     <form>
-                        <div class="form-row">
-                            <div class="form-group col-md-6">
-                                <label for="firstName">First Name</label>
-                                <input type="text" class="form-control" id="firstName" placeholder="First Name">
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="lastName">Last Name</label>
-                                <input type="password" class="form-control" id="lastName" placeholder="Last Name">
-                            </div>
+                        <p>Fill Personal Information</p>
+                        <div class="form-group">
+                            <label for="firstname">FirstName</label>
+                            <input type="text" class="form-control" id="firstname" placeholder="First Name">
                         </div>
+                        <div class="form-group">
+                            <label for="lastname">LastName</label>
+                            <input type="text" class="form-control" id="lastname" placeholder="Last Name">
+                        </div>
+
                         <div class="form-group">
                             <label for="licNumber">License Number</label>
                             <input type="text" class="form-control" id="licNumber" placeholder="License Number">
                         </div>
-                        <div class="form-row">
-                            <div class="form-group col-md-6">
-                                <label for="age">Age</label>
-                                <input type="number" class="form-control" id="age" placeholder="Age">
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="dob">DOB</label>
-                                <input type="date" class="form-control" id="dob" placeholder="DOB">
-                            </div>
+
+                        <div class="form-group">
+                            <label for="age">Age</label>
+                            <input type="number" class="form-control" id="age" placeholder="Age">
                         </div>
 
-                        <div class="form-row">
-                            <div class="form-group col-md-6">
-                                <label for="car-make">Make</label>
-                                <input type="text" id="car-make" placeholder="Car Make">
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="car-model">Model</label>
-                                <input type="text" id="car-model" placeholder="Car Model">
-                            </div>
+                        <p>Car Details</p>
+                        <div class="form-group">
+                            <label for="make">Make</label>
+                            <input type="text" class="form-control" id="make" placeholder="Tesla">
+                        </div>
+                        <div class="form-group">
+                            <label for="car-make">Model</label>
+                            <input type="text" class="form-control" id="car-make" placeholder="Model X">
                         </div>
 
-                        <div class="form-row">
-                            <div class="form-group col-md-6">
-                                <label for="car-year">Year</label>
-                                <input type="number" id="car-year" placeholder="Car Year">
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="plate-number">Number</label>
-                                <input type="text" id="plate-number" placeholder="Plate Number">
-                            </div>
+                        <div class="form-group">
+                            <label for="car-model">Year</label>
+                            <input type="text" class="form-control" id="car-model" placeholder="2020">
+                        </div>
+                        <div class="form-group">
+                            <label for="car-number">Plate Number</label>
+                            <input type="car-number" class="form-control" id="car-year" placeholder="XYZ">
                         </div>
 
-                        <button type="submit" class="btn btn-primary">Submit Request</button>
+                        <button type="submit" class="btn btn-primary" id="g2-send">Send</button>
                     </form>
 
                 </div>
