--- a/views/g2test.ejs
+++ b/views/g2test.ejs
@@ -27,40 +27,47 @@
                         <p>Fill Personal Information</p>
                         <div class="form-group">
                             <label for="firstname">FirstName</label>
-                            <input type="text" class="form-control" id="firstname" placeholder="First Name">
+                            <input type="text" class="form-control" id="firstName" placeholder="First Name"
+                                name="firstName">
                         </div>
                         <div class="form-group">
                             <label for="lastname">LastName</label>
-                            <input type="text" class="form-control" id="lastname" placeholder="Last Name">
+                            <input type="password" class="form-control" id="lastName" placeholder="Last Name"
+                                name="lastName">
                         </div>
 
                         <div class="form-group">
                             <label for="licNumber">License Number</label>
-                            <input type="text" class="form-control" id="licNumber" placeholder="License Number">
+                            <input type="text" class="form-control" id="licNumber" placeholder="License Number"
+                                name="licNumber">
                         </div>
 
                         <div class="form-group">
                             <label for="age">Age</label>
-                            <input type="number" class="form-control" id="age" placeholder="Age">
+                            <input type="number" class="form-control" id="age" placeholder="Age" name="age">
                         </div>
 
                         <p>Car Details</p>
                         <div class="form-group">
                             <label for="make">Make</label>
-                            <input type="text" class="form-control" id="make" placeholder="Tesla">
+                            <input type="text" id="car-make" class="form-control" placeholder="Car Make"
+                                name="car-make">
                         </div>
                         <div class="form-group">
                             <label for="car-make">Model</label>
-                            <input type="text" class="form-control" id="car-make" placeholder="Model X">
+                            <input type="text" id="car-model" class="form-control" placeholder="Car Model"
+                                name="car-model">
                         </div>
 
                         <div class="form-group">
                             <label for="car-model">Year</label>
-                            <input type="text" class="form-control" id="car-model" placeholder="2020">
+                            <input type="number" id="car-year" class="form-control" placeholder="Car Year"
+                                name="car-year">
                         </div>
                         <div class="form-group">
                             <label for="car-number">Plate Number</label>
-                            <input type="car-number" class="form-control" id="car-year" placeholder="XYZ">
+                            <input type="text" id="plate-number" class="form-control" placeholder="Plate Number"
+                                name="plate-number">
                         </div>
 
                         <button type="submit" class="btn btn-primary" id="g2-send">Send</button>
