--- a/views/gtest.ejs
+++ b/views/gtest.ejs
@@ -21,14 +21,13 @@
             <!-- Main Content-->
             <main class="mb-4">
                 <div class="container g2form-container">
-
-                    <form>
-                        <h3>Lisence Number</h3>
+                    <h3>Lisence Number</h3>
+                    <form action="/gtest/user" method="GET">
                         <div class="input-group input-group-lg">
                             <input type="text" class="form-control" aria-label="Large"
-                                aria-describedby="inputGroup-sizing-sm" id="lisence-number">
+                                aria-describedby="inputGroup-sizing-sm" id="licNumber" name="licNumber">
                             <div class="input-group-prepend">
-                                <a href="#" class="input-group-text bg-primary">Submit</a>
+                                <button type="submit" class="input-group-text bg-primary">Submit</button>
                             </div>
                         </div>
                     </form>
