--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
         <%- include('./layouts/navbar'); -%>
 
             <!-- Page Header-->
-            <header class="masthead">
+            <header class="masthead" style="  padding-top: 5rem; padding-bottom: 5rem;">
                 <div class="container position-relative px-4 px-lg-5">
                     <div class="row gx-4 gx-lg-5 justify-content-center">
                         <div class="col-md-10 col-lg-8 col-xl-7">
