--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,141 +5,43 @@
     <body>
 
         <%- include('./layouts/navbar'); -%>
-
             <!-- Page Header-->
-            <header class="masthead" style="  padding-top: 5rem; padding-bottom: 5rem;">
+            <header class="masthead" style="background: url(assets/bg.jpg);background-repeat: no-repeat;
+            background-size: cover; ">
                 <div class="container position-relative px-4 px-lg-5">
                     <div class="row gx-4 gx-lg-5 justify-content-center">
                         <div class="col-md-10 col-lg-8 col-xl-7">
-                            <div class="page-heading">
-                                <h1>Login</h1>
-                                <span class="subheading">Login to Book Drive Test</span>
+                            <div class="site-heading">
+                                <h1>Dashboard</h1>
+                                <span class="subheading">DriveTest Booking Kiosk</span>
                             </div>
                         </div>
                     </div>
                 </div>
             </header>
             <!-- Main Content-->
-            <main class="mb-4">
-
-                <div class="container">
-
-                    <div class="tab-content">
-                        <div class="tab-pane fade show active" id="pills-login" role="tabpanel"
-                            aria-labelledby="tab-login">
-                            <form>
-
-                                <!-- Email input -->
-                                <div class="form-outline mb-4">
-                                    <input type="email" id="loginName" class="form-control" />
-                                    <label class="form-label" for="loginName">Email or username</label>
-                                </div>
-
-                                <!-- Password input -->
-                                <div class="form-outline mb-4">
-                                    <input type="password" id="loginPassword" class="form-control" />
-                                    <label class="form-label" for="loginPassword">Password</label>
-                                </div>
-
-                                <!-- 2 column grid layout -->
-                                <div class="row mb-4">
-                                    <div class="col-md-6 d-flex justify-content-center">
-                                        <!-- Checkbox -->
-                                        <div class="form-check mb-3 mb-md-0">
-                                            <input class="form-check-input" type="checkbox" value="" id="loginCheck"
-                                                checked />
-                                            <label class="form-check-label" for="loginCheck"> Remember me </label>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-md-6 d-flex justify-content-center">
-                                        <!-- Simple link -->
-                                        <a href="#!">Forgot password?</a>
-                                    </div>
-                                </div>
-
-                                <!-- Submit button -->
-                                <button type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>
-
-                                <!-- Register buttons -->
-                                <div class="text-center">
-                                    <p>Not a member? <a href="#!">Register</a></p>
-                                </div>
-                            </form>
+            <div class="container px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-md-10 col-lg-8 col-xl-7">
+                        <!-- Post preview-->
+                        <div class="post-preview">
+                            <a href="/gtest">
+                                <h2 class="post-title">You can book G2/G drive test from this Kiosk</h2>
+                                <h3 class="post-subtitle">You can book G2/G drive test from this Kiosk</h3>
+                            </a>
+                            <p class="post-meta">
+                                Posted by
+                                <a href="#!">DriveTest Center</a>
+                            </p>
                         </div>
-                        <div class="tab-pane fade" id="pills-register" role="tabpanel" aria-labelledby="tab-register">
-                            <form>
-                                <div class="text-center mb-3">
-                                    <p>Sign up with:</p>
-                                    <button type="button" class="btn btn-link btn-floating mx-1">
-                                        <i class="fab fa-facebook-f"></i>
-                                    </button>
 
-                                    <button type="button" class="btn btn-link btn-floating mx-1">
-                                        <i class="fab fa-google"></i>
-                                    </button>
-
-                                    <button type="button" class="btn btn-link btn-floating mx-1">
-                                        <i class="fab fa-twitter"></i>
-                                    </button>
-
-                                    <button type="button" class="btn btn-link btn-floating mx-1">
-                                        <i class="fab fa-github"></i>
-                                    </button>
-                                </div>
-
-                                <p class="text-center">or:</p>
-
-                                <!-- Name input -->
-                                <div class="form-outline mb-4">
-                                    <input type="text" id="registerName" class="form-control" />
-                                    <label class="form-label" for="registerName">Name</label>
-                                </div>
-
-                                <!-- Username input -->
-                                <div class="form-outline mb-4">
-                                    <input type="text" id="registerUsername" class="form-control" />
-                                    <label class="form-label" for="registerUsername">Username</label>
-                                </div>
-
-                                <!-- Email input -->
-                                <div class="form-outline mb-4">
-                                    <input type="email" id="registerEmail" class="form-control" />
-                                    <label class="form-label" for="registerEmail">Email</label>
-                                </div>
-
-                                <!-- Password input -->
-                                <div class="form-outline mb-4">
-                                    <input type="password" id="registerPassword" class="form-control" />
-                                    <label class="form-label" for="registerPassword">Password</label>
-                                </div>
-
-                                <!-- Repeat Password input -->
-                                <div class="form-outline mb-4">
-                                    <input type="password" id="registerRepeatPassword" class="form-control" />
-                                    <label class="form-label" for="registerRepeatPassword">Repeat password</label>
-                                </div>
-
-                                <!-- Checkbox -->
-                                <div class="form-check d-flex justify-content-center mb-4">
-                                    <input class="form-check-input me-2" type="checkbox" value="" id="registerCheck"
-                                        checked aria-describedby="registerCheckHelpText" />
-                                    <label class="form-check-label" for="registerCheck">
-                                        I have read and agree to the terms
-                                    </label>
-                                </div>
-
-                                <!-- Submit button -->
-                                <button type="submit" class="btn btn-primary btn-block mb-3">Sign in</button>
-                            </form>
-                        </div>
                     </div>
-
                 </div>
-            </main>
-            <!-- Footer-->
+            </div>
+
 
             <%- include('./layouts/scripts'); -%>
+
     </body>
 
 </html>
