--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
 
         <%- include('./layouts/navbar'); -%>
             <!-- Page Header-->
-            <header class="masthead" style="background: url(assets/bg.jpg);background-repeat: no-repeat;
+            <header class="masthead" style="background: url(assets/bg.jpeg);background-repeat: no-repeat;
             background-size: cover; ">
                 <div class="container position-relative px-4 px-lg-5">
                     <div class="row gx-4 gx-lg-5 justify-content-center">
