--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,43 +5,95 @@
     <body>
 
         <%- include('./layouts/navbar'); -%>
+
             <!-- Page Header-->
-            <header class="masthead" style="background: url(assets/bg.jpg);background-repeat: no-repeat;
-            background-size: cover; ">
-                <div class="container position-relative px-4 px-lg-5">
-                    <div class="row gx-4 gx-lg-5 justify-content-center">
-                        <div class="col-md-10 col-lg-8 col-xl-7">
-                            <div class="site-heading">
-                                <h1>Dashboard</h1>
-                                <span class="subheading">DriveTest Booking Kiosk</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <header class="masthead" style="padding: 40px;">
+
             </header>
             <!-- Main Content-->
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-md-10 col-lg-8 col-xl-7">
-                        <!-- Post preview-->
-                        <div class="post-preview">
-                            <a href="/gtest">
-                                <h2 class="post-title">You can book G2/G drive test from this Kiosk</h2>
-                                <h3 class="post-subtitle">You can book G2/G drive test from this Kiosk</h3>
-                            </a>
-                            <p class="post-meta">
-                                Posted by
-                                <a href="#!">DriveTest Center</a>
-                            </p>
+            <main class="mb-4">
+
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                        </div>
+                        <div class="col-md-5">
+                            <div class="card p-3">
+                                <h3>Sign up</h3>
+                                &nbsp;
+                                <form action="/user/register" method="POST">
+                                    <!-- Username input -->
+                                    <div class="form-outline mb-4">
+                                        <label class="form-label" for="registerUsername">Username</label>
+                                        <input type="text" id="registerUsername" class="form-control" name="username" />
+                                    </div>
+
+                                    <!-- Password input -->
+                                    <div class="form-outline mb-4">
+                                        <label class="form-label" for="registerPassword">Password</label>
+                                        <input type="password" id="registerPassword" class="form-control" name="password"/>
+                                    </div>
+
+                                    <!-- Repeat Password input -->
+                                    <div class="form-outline mb-4">
+                                        <label class="form-label" for="registerRepeatPassword">Repeat
+                                            password</label>
+                                        <input type="password" id="registerRepeatPassword" class="form-control" name="confirmPassword"/>
+
+                                    </div>
+
+                                    <div class="form-outline mb-4">
+                                        <label for="userType" class="form-label">User Type</label>
+                                        <select class="form-select" id="userType" name="user_type">
+                                            <option value="driver">Driver</option>
+                                            <option value="examiner">Examiner</option>
+                                            <option value="admin">Admin</option>
+                                        </select>
+                                    </div>
+
+
+                                    <!-- Submit button -->
+                                    <button type="submit" class="btn btn-primary btn-block mb-3">Register</button>
+                                </form>
+
+                            </div>
+                        </div>
+
+                        <div class="col-md-5">
+                            <div class="card p-3">
+                                <h3>Login</h3>
+                                &nbsp;
+                                <form action="/user/login" method="POST">
+                                    <!-- Email input -->
+                                    <div class="form-outline mb-4">
+                                        <label class="form-label" for="loginName">Username</label>
+                                        <input type="text" id="loginName" class="form-control" name="username"/>
+                                    </div>
+
+                                    <!-- Password input -->
+                                    <div class="form-outline mb-4">
+                                        <label class="form-label" for="loginPassword">Password</label>
+                                        <input type="password" id="loginPassword" class="form-control" name="password"/>
+                                    </div>
+
+                                    <!-- Submit button -->
+                                    <button type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>
+
+                                </form>
+                            </div>
+                        </div>
+
+
+                        <div class="col">
                         </div>
 
                     </div>
                 </div>
-            </div>
-
+                </div>
+            </main>
+            <!-- Footer-->
 
             <%- include('./layouts/scripts'); -%>
-
     </body>
 
 </html>
